# deneme

./: ARCHITECTURE.md  DOCKER_SETUP_GUIDE.md  Dockerfile  INSTALL_PYTORCH_CUDA.md  INSTALL_WINDOWS.md  QUICKSTART.md  README.md  docker-compose - Kopya.yml  docker-compose.yml  pyproject.toml  requirements - freezed.txt  requirements.txt  sigma_cli.ps1
backend/: cli.py  derived_timeframes.py  historical_sync.py
backend/api/: main.py
backend/api/routes/: analysis.py  ops.py
backend/backtest/: backtest_engine.py  engine.py  walk_forward.py
backend/config/: compute_config.py
backend/core/: __init__.py  alerting.py  config.py  portfolio.py
backend/core/memory/: __init__.py  memory_manager.py  state_manager.py
backend/data/processors/: __init__.py  advanced_analysis.py  features.py  technical_indicators.py
backend/data/sources/: __init__.py  aggr.py  aggregator.py  base.py  binance.py  bybit.py  coinalyze.py  cryptoquant.py  glassnode.py  okx.py
backend/learning/: claude_reasoning.py  historical_learning.py  manual_training.py  pdf_rag.py
backend/models/: __init__.py  deep_learning.py  ensemble_model.py  rl_agent.py
backend/models/ml/: __init__.py  ensemble.py  lstm.py  transformer_pattern.py
backend/models/rl/: decision_transformer.py  ppo.py
backend/sync/: __init__.py  historical_sync.py
backend/tasks/: __init__.py  celery_app.py  tasks.py
data/: celerybeat-schedule
data/historical/: BTCUSDT_1d_futures.parquet
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  ControlPanel.tsx  api - Kopya.ts  main.tsx
(+15 files in other folders)
